Added additional methods to test webservice data retrieval.

--- a/SOURCE/FIDB/Webservice/PlantWebService.TestSite/Views/Home/Index.cshtml
+++ b/SOURCE/FIDB/Webservice/PlantWebService.TestSite/Views/Home/Index.cshtml
@@ -7,4 +7,9 @@
 
 <ul>
     <li>@Html.ActionLink("RetrieveProcessOrderList", "RetrieveProcessOrderList")</li>
+    <li>@Html.ActionLink("RetrieveProcessOrder", "RetrieveProcessOrder")</li>
+    <li>@Html.ActionLink("RetrieveMaterialBatchList", "RetrieveMaterialBatchList")</li>
+    <li>@Html.ActionLink("RetrieveMarsCalendar", "RetrieveMarsCalendar")</li>
+    <li>@Html.ActionLink("RetrieveMaterials", "RetrieveMaterials")</li>
+    <li>@Html.ActionLink("RetrieveFactoryTransfers", "RetrieveFactoryTransfers")</li>
 </ul>
