Added CreateGRProcessOrder to test site Bugfix for RetrieveMaterialBatchList

--- a/SOURCE/FIDB/Webservice/PlantWebService.TestSite/Views/Home/Index.cshtml
+++ b/SOURCE/FIDB/Webservice/PlantWebService.TestSite/Views/Home/Index.cshtml
@@ -12,4 +12,5 @@
     <li>@Html.ActionLink("RetrieveMarsCalendar", "RetrieveMarsCalendar")</li>
     <li>@Html.ActionLink("RetrieveMaterials", "RetrieveMaterials")</li>
     <li>@Html.ActionLink("RetrieveFactoryTransfers", "RetrieveFactoryTransfers")</li>
+    <li>@Html.ActionLink("CreateGRProcessOrder", "CreateGRProcessOrder")</li>
 </ul>
